# axiomm

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  conf.py  index.md
docs/dev/: STATE.md
docs/specs/: converter_tool_spec.md
docs/specs/_legacy/: README.md  converter_prototype.py
docs/user/: converter.md  known_issues.md
identy/AXIOMM_Design/: AXIOMM Identity Kit.html
src/axiomm/: __init__.py
src/axiomm/io/: __init__.py
src/axiomm/io/converters/: __init__.py  calibration.py  discovery.py  errors.py  metadata.py  models.py  presets.py  registry.py  workflows.py
src/axiomm/io/converters/readers/: __init__.py  base.py  hdf5_generic.py  hdf5_helpers.py  hdf5_schema.py  xrmmap_h5.py
src/axiomm/io/converters/signals/: __init__.py  base.py  hyperspy_builder.py  validation.py
src/axiomm/io/converters/writers/: __init__.py  base.py  hspy.py  manifest.py
tests/io/converters/: conftest.py  test_calibration.py  test_calibration_chunk18.py  test_calibration_resolution.py  test_discovery.py  test_hdf5_generic.py  test_hdf5_helpers.py  test_hdf5_schema.py  test_hspy_writer.py  test_hyperspy_builder.py  test_import_has_no_side_effects.py  test_manifest_writer.py  test_metadata.py  test_presets.py  test_realistic_xrmmap_regression.py  test_registry.py  test_workflows.py  test_xrmmap_h5_reader.py
